--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorAccent">#ffFFFF</color>
+    <color name="colorAccent">#fcda1a</color>
     <color name="primaryColor">#2e7d32</color>
     <color name="primaryDarkColor">#005005</color>
 </resources>
