--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ArticleDetailActivity">
+    tools:context=".SearchActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -20,19 +20,9 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.widget.ContentLoadingProgressBar
-        android:id="@+id/web_v_pb"
-        style="?android:progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:indeterminate="true"
-        />
-    <!--android:visibility="gone"
-        tools:visibility="visible"-->
-
-    <WebView
-        android:id="@+id/article_detail_web_v"
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
 
 </LinearLayout>
