4 create fragments part 2

--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -3,10 +3,10 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".FavoritesFragment">
+             tools:context=".main.FavoritesFragment">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/favorites_rv"
+        android:id="@+id/favorites_article_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
