--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -3,10 +3,10 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".HistoryFragment">
+             tools:context=".main.HistoryFragment">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/history_rv"
+        android:id="@+id/history_article_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
